--- a/app/styles/base/_variables.scss
+++ b/app/styles/base/_variables.scss
@@ -4,3 +4,8 @@ $nav-text-color: white;
 
 // navigation colors
 $nav-background: $grey;
+
+// clock variables
+$color-text-color: white;
+$clock-bg-color: #b5d0e2;
+$clock-border-color: #2099e8;
