finished countdown component

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -1,8 +1,5 @@
 @import "base/variables";
 @import "components/navigation";
 @import "components/clock";
-
-
-p {
-    color: #777;
-}
+@import "components/controls";
+@import "components/page-title";
