--- a/app/styles/components/_clock.scss
+++ b/app/styles/components/_clock.scss
@@ -15,3 +15,11 @@
     font-size: 2.25rem;
     font-weight: 300;
 }
+
+.countdown-form {
+    align-items: center;
+    justify-content: center;
+    display: block;
+    margin: auto;
+    width: 50%;
+}
